# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/: linter_ci.yml
.github/workflows/: linter.yaml
brain_games/: __init__.py  cli.py  engine.py  global_constants.py
brain_games/games/: __init__.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
