[tool.poetry]
name = "hexlet-project"
version = "1.1.0"
description = "first of four training projects on the Python Software Developer course on Hexlet.io"
authors = ["Denis <Dysprosium92@ya.ru>"]
license = "MIT License"
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
